spacing is fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -129,7 +129,7 @@ article {
   min-height: 90%;
   position: relative;
   z-index:-2;
-  margin-bottom:-7em;
+  margin-bottom:-5em;
 }
 
 .seperator {
